# evm-account-generator

./: Cargo.toml  README.md
examples/: basic_usage.rs  benchmark.rs  compare_generators.rs  comprehensive.rs  custom_rng.rs  dev_random.rs  multi_blockchain_generator.rs  sequential_generator.rs  vanity.rs
src/: dev_random_rng.rs  error.rs  evm_key_generator.rs  lib.rs  main.rs  private_key.rs  private_key_generator.rs  rng.rs  traits.rs
src/crypto/: key_generation.rs  mod.rs  private_key.rs  test.rs  validation.rs
src/evm/: evm_private_key.rs  incremental_generator.rs  mod.rs  private_key.rs
src/rng/: dev_random.rs  dev_random_legacy.rs  mock.rs  mod.rs  thread_rng.rs  trait_def.rs
src/rng/dev_random/: dev_random.rs  mod.rs
src/rng/thread_rng/: mod.rs  thread_rng.rs
src/solana/: mod.rs  private_key.rs  solana_private_key.rs
src/types/: address.rs  hex.rs  mod.rs
tests/: integration_tests.rs
